# lite-move-vm

./: Cargo.toml  README.md
src/: lib.rs
tests/: lib.rs
tests/test-package/: Move.toml
tests/test-package/sources/: main.move
tests/test-package/tests/: test.move
